--- a/TextWin.csproj
+++ b/TextWin.csproj
@@ -71,19 +71,25 @@
     <Compile Include="ViewModels\TextFieldViewModel.cs" />
     <Compile Include="ViewModels\TextViewModel.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
-    <Compile Include="WPF\TextFieldDateUC.xaml.cs">
+    <Compile Include="Win\TextFieldKeyValueListUC.xaml.cs">
+      <DependentUpon>TextFieldKeyValueListUC.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Win\TextFieldAddDocumentTextWindow.xaml.cs">
+      <DependentUpon>TextFieldAddDocumentTextWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Win\TextFieldDateUC.xaml.cs">
       <DependentUpon>TextFieldDateUC.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WPF\TextFieldEvaluatedValueUC.xaml.cs">
+    <Compile Include="Win\TextFieldEvaluatedValueUC.xaml.cs">
       <DependentUpon>TextFieldEvaluatedValueUC.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WPF\TextFieldWindow.xaml.cs">
+    <Compile Include="Win\TextFieldWindow.xaml.cs">
       <DependentUpon>TextFieldWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WPF\TextFieldSelectObjectUC.xaml.cs">
+    <Compile Include="Win\TextFieldSelectObjectUC.xaml.cs">
       <DependentUpon>TextFieldSelectObjectUC.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WPF\TextWindow.xaml.cs">
+    <Compile Include="Win\TextWindow.xaml.cs">
       <DependentUpon>TextWindow.xaml</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -116,32 +122,46 @@
     <Resource Include="Resources\text_field.png" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="WPF\TextFieldDateUC.xaml">
+    <Page Include="Win\TextFieldKeyValueListUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="WPF\TextFieldEvaluatedValueUC.xaml">
+    <Page Include="Win\TextFieldAddDocumentTextWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="WPF\TextFieldWindow.xaml">
+    <Page Include="Win\TextFieldDateUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="WPF\TextFieldSelectObjectUC.xaml">
+    <Page Include="Win\TextFieldEvaluatedValueUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="WPF\TextWindow.xaml">
+    <Page Include="Win\TextFieldWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Win\TextFieldSelectObjectUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Win\TextWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Rhino.Windows\Rhino.Windows.csproj">
-      <Project>{3098558b-395b-475b-b677-e82f80eea740}</Project>
-      <Name>Rhino.Windows</Name>
+    <ProjectReference Include="..\RhinoWindows\RhinoWindows.csproj">
+      <Project>{78e5c303-7764-446e-baba-fdb410bd98e1}</Project>
+      <Name>RhinoWindows</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add_item.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add_item%402x.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
